# Discrete-Maths-Graph-Library

./: CMakeLists.txt  LICENSE  Makefile  README.md  graph.c  graph.h  huffman.c  huffman.h  jrb.h  prufer.c  week8
files/: bellmanford.dot  bfs.dot  component.dot  dag.dot  dfs.dot  dijkstra.dot  huffman.dot  input.txt  kruskal.dot  randomComponents.dot  stronglycomponent.dot  topo.dot
io/: iocoloring.c  iocomponents.c  iodag.c  iodfsbfs.c  iodot.h  iohelper.c  iohuffman.c  iopath.c  iospanningtrees.c  iotopo.c
src/: coloring.c  coloring.h  components.c  components.h  graph.c  graph.h  huffman.c  prufer.c  prufer.h  spanningTrees.c  spanningtrees.h
src/io/: iocomponents.c  iodot.h  iohelper.c
tests/: coloringTest.c  connectedTest.c  dfsBfsTest.c  huffmanTest.c  iocomponentsTest.c  iodagTest.c  iodfsbfsTest.c  iohuffmanTest.c  iopathTest.c  iospanningtreesTest.c  iotopoTest.c  iotraversalTest.c  primTest.c  pruferTest.c  randomGraph.c  shortestPathTest.c  spanningTreesTest.c  topoTest.c
tests/sgb-test/: Makefile  sgb-words.txt
tests/sgb-test/files/: bfs.dot  component.dot  dfs.dot  input.txt  prim.dot  randomComponents.dot  stronglycomponent.dot  topo.dot
tests/sgb-test/include/: bc.h  bt.h  btree.h  fields.h  graph.h  huffman.h  iodot.h  jrb.h  prufer.h  randomgraph.h
tests/sgb-test/output/: main
tests/sgb-test/src/src-lib/: components.c  graph.c  huffman.c  iodot.c  prufer.c  randomgraph.c  spanningtrees.c
tests/sgb-test/tests/: coloringTest.c  connectedTest.c  dfsBfsTest.c  huffmanTest.c  iocomponentsTest.c  iodagTest.c  iohuffmanTest.c  iopathTest.c  iospanningtreesTest.c  iotopoTest.c  iotraversalTest.c  pruferTest.c  randomGraph.c  sbdTest.c  shortestPathTest.c  spanningTreesTest.c  topoTest.c
