add_subdirectory(libfdr fdr)
add_subdirectory(src graph)
add_subdirectory(io inou)

add_executable(topoTest ./tests/topoTest.c)
add_executable(dfsBfsTest ./tests/dfsBfsTest.c)
add_executable(shortestPathTest ./tests/shortestPathTest.c)
add_executable(coloringTest ./tests/coloringTest.c)
add_executable(connectedTest ./tests/connectedTest.c)
add_executable(huffmanTest ./tests/huffmanTest.c)
add_executable(pruferTest ./tests/pruferTest.c)
add_executable(spanningTreesTest ./tests/spanningTreesTest.c)

target_link_libraries(topoTest graph fdr)
target_link_libraries(dfsBfsTest graph fdr)
target_link_libraries(shortestPathTest graph fdr)
target_link_libraries(coloringTest graph fdr)
target_link_libraries(connectedTest graph fdr)
target_link_libraries(huffmanTest graph fdr)
target_link_libraries(pruferTest graph fdr)
target_link_libraries(spanningTreesTest graph fdr)

add_executable(iotopoTest ./tests/iotopoTest.c ./io/iotopo.c ./io/iohelper.c)
add_executable(iotraversalTest ./tests/iotraversalTest.c ./io/iodfsbfs.c ./io/iohelper.c)
add_executable(iopathTest ./tests/iopathTest.c ./io/iopath.c ./io/iohelper.c)
add_executable(iodagTest ./tests/iodagTest.c ./io/iodag.c ./io/iohelper.c)
add_executable(iocomponentsTest ./tests/iocomponentsTest.c ./io/iocomponents ./io/iohelper.c)
add_executable(iohuffmanTest ./tests/iohuffmanTest.c ./io/iohuffman.c ./io/iohelper.c)
add_executable(iospanningTreesTest ./tests/iospanningtreesTest.c ./io/iospanningtrees.c ./io/iohelper.c)

target_link_libraries(iotopoTest graph fdr)
target_link_libraries(iotraversalTest graph fdr)
target_link_libraries(iopathTest graph fdr)
target_link_libraries(iodagTest graph fdr)
target_link_libraries(iocomponentsTest graph fdr)
target_link_libraries(iohuffmanTest graph fdr)
target_link_libraries(iospanningTreesTest graph fdr)